--- a/zjl/zhihu/zhihu.html
+++ b/zjl/zhihu/zhihu.html
@@ -27,11 +27,11 @@
 		    </div>
 		</div>
 		<div class="topinr">
-			<ul class="topinrin">
+			<ul class="topinrin tpspecial1" >
 				<li class="lispe">
 					<a href="#" class="lispe1">注册帐号</a>
-					<a href="#" class="lispe2">
-					<i class="lispe2pic"></i>登录
+					<a href="#" class="lispe2 login">
+					<i class="lispe2pic "></i>登录
 					</a>
 				</li>
 				<li class="licom">
@@ -54,6 +54,36 @@
 					社交帐号直接登录 &nbsp;
 				</li>
 			</ul>
+			<ul class="topinrin tpspecial2">
+				<li class="lispe">
+					<a href="#" class="lispe1">注册帐号</a>
+					<a href="#"  class="lispe2 zhuce">
+					<i class="lispe2pic "></i>注册
+					</a>
+				</li>
+				<li class="licom">
+					<input  class="email" placeholder="知乎注册邮箱">
+				</li>
+				<li class="licom">
+					<input  class="psw" placeholder="密码">
+				</li>
+				<li class="licom">
+					<button  class="submit" >登录</button>
+				</li>
+				<li class="licom">
+					<label>
+					<input type="checkbox"  checked="" value="y"> 记住我
+					</label>
+					<a class="reset-password"  href="#">忘记密码？</a>
+				</li>
+				<li class="lispes">
+					<a class="lispespic" href="#">
+					<i class="weibo"></i>
+					<i class="qq"></i></a>
+					社交帐号直接登录 &nbsp;
+				</li>
+			</ul>
+
 		</div>
 	</div>
 </div>
@@ -181,42 +211,7 @@
 					<span>Cat Chen在 <a href=""> Facebook</a>、<a href="">两性关系</a>、<a href="">恋爱</a>等话题下获得了 18135 个赞同</span>
 				</div>
 			</ul>
-		    <ul class="ulcom ">
-				<a  href="#" class="ullogo" >
-				<img src="image/424c70919_m.jpg">
-
-			    </a>
-			    <div class="title">
-			    	<div class="title1">
-			    		<a href="#" class="author">张佳玮</a>
-			    		<span>五月新书《迈克尔-乔丹和他的时代》</span>
-			    	</div>
-		    	<div class="title2">在知乎回答了 1901 个问题，574175 人关注他。</div>
-			    </div>
-			    <div class="line"></div>
-			    <div class="content">
-			    	<div class="answer">
-						<span class="vote">
-							16.9K
-						</span>
-						<a class="answertxt"  href="#">你爱上某一个人时，最奇特的一次是因为什么？</a>
-					</div>
-					<div class="answer answers">
-						<span class="vote">
-							9801
-						</span>
-						<a class="answertxt"  href="#">什么样的男人才算是成熟的男人？</a>
-					</div>
-					<div class="answer answers">
-						<span class="vote">
-								5020	
-						</span>
-						<a class="answertxt"  href="#">你有什么经历证明了「念念不忘，必有回响」？</a>
-					</div>
-			    </div>
-			    <div class="answerbottom"><span>张佳玮在 <a href=""> 心理学</a>、<a href="">人生</a>、<a href="">恋爱</a>等话题下获得了 491468个赞同</span>
-				</div>
-			</ul>
+		   
 			<ul id="ul3" class="ulcom ">
 				<a  href="#" class="ullogo" >
 				<img src="image/39420a7da_m.jpg">
@@ -355,8 +350,329 @@
 			    </a>
 			    <div class="title">
 			    	<div class="title1">
-			    		<a href="#" class="author">苹果公司 </a>
-			    		<span>(Apple Inc.)</span>
+			    		<a href="#" class="author">Eric Liu旅居日本 </a>
+			    		<span>平面设计、字体排印、汉语方言语音学爱好者。</span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 52 个问题，15020 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							177
+						</span>
+						<a class="answertxt"  href="#">有些日语歌词为什么要写一个词却特别用假名标注唱成另一个词？</a>
+					</div>
+					<div class="answer ">
+						<span class="vote">
+							149
+						</span>
+						<a class="answertxt"  href="#">黑体的「喇叭口」是怎么回事？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								118	
+						</span>
+						<a class="answertxt"  href="#">为什么很多日本人说英语口音总是很重？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							238
+						</span>
+						<a class="answertxt"  href="#">Eric Liu 在 字体设计、字体、字体排印 等话题下获得了 1761 个赞同</a>
+					</div>
+			    </div>	
+			</ul>
+			<ul id="ul7" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/bd6b19fc1_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author">交互设计 </a>
+			    		<span></span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 5233个问题，45020 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer ">
+						<span class="vote">
+							4616
+						</span>
+						<a class="answertxt"  href="#">真正打动过你的一个设计是什么？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							4549
+						</span>
+						<a class="answertxt"  href="#">怎样做出优秀的扁平化设计风格 PPT 或 Keynote 幻灯片演示文稿？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								118	
+						</span>
+						<a class="answertxt"  href="#">信息图（infographic）是怎么做出来的？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							238
+						</span>
+						<a class="answertxt"  href="#">有哪些反人类的科技发明或设计？</a>
+					</div>
+			    </div>	
+			    <div class="answerbottom">
+					<span>Cat Chen在 <a href=""> Facebook</a>、<a href="">关系</a>、<a href="">恋爱</a>等话题下获得了 18135 个赞同</span>
+				</div>
+			</ul>
+			<ul id="ul8" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/424c70919_m.jpg">
+
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author">张佳玮</a>
+			    		<span>五月新书《迈克尔-乔丹和他的时代》</span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 1901 个问题，574175 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							16.9K
+						</span>
+						<a class="answertxt"  href="#">你爱上某一个人时，最奇特的一次是因为什么？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							9801
+						</span>
+						<a class="answertxt"  href="#">什么样的男人才算是成熟的男人？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								5020	
+						</span>
+						<a class="answertxt"  href="#">你有什么经历证明了「念念不忘，必有回响」？</a>
+					</div>
+			    </div>
+			    <div class="answerbottom"><span>张佳玮在 <a href=""> 心理学</a>、<a href="">人生</a>、<a href="">恋爱</a>等话题下获得了 491468个赞同</span>
+				</div>
+		    </ul>
+			<ul id="ul9" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/f31f31002_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author"> weizhi pan </a>
+			    		<span>以写半衰期长的答案为目标</span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 90 个问题，56941 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							1060
+						</span>
+						<a class="answertxt"  href="#">「熟练使用 Bloomberg」到底需要多熟练？熟练哪些内容？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							596
+						</span>
+						<a class="answertxt"  href="#">有哪些通过玩游戏学会了东西的例子？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								430
+						</span>
+						<a class="answertxt"  href="#">为什么很多日本人说英语口音总是很重？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							234
+						</span>
+						<a class="answertxt"  href="#">风险价值（VaR）是否是有史以来最蠢的衡量指标？</a>
+					</div>
+			    </div>	
+			</ul>
+			<ul id="ul10" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/3df29abc3_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author"> MoonMonster长文流 </a>
+			    		<span>www.jianjia360.com</span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 34 个问题，622 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							991
+						</span>
+						<a class="answertxt"  href="#">Chrome 浏览器的哪些设计符合「Don't Make Me Think」原则？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							928
+						</span>
+						<a class="answertxt"  href="#">在 App 里，遇到告警或者提示用户，「确定」按钮应该放在左边还是右边？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								578
+						</span>
+						<a class="answertxt"  href="#">为什么很多日本人说英语口音总是很重？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							1234
+						</span>
+						<a class="answertxt"  href="#">屏幕虚拟键盘键位之间为何都有空隙，原因是什么？仅为了拟物？</a>
+					</div>
+			    </div>	
+			</ul>
+			<ul id="ul11" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/843e04171_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">知乎用户</a>
+			    		<span>电影爱好者</span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 1053 个问题，331522 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							2058
+						</span>
+						<a class="answertxt"  href="#">某学生为学琴异地求学，母亲全程陪读，如何看待父母为子女这样的牺牲奉献？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							22099
+						</span>
+						<a class="answertxt"  href="#">如果北京爆发丧尸病毒，逃跑路线是怎样的？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							20220	
+						</span>
+						<a class="answertxt"  href="#">目前你看到过或听过的最喜欢或者认为最好的文案是什么？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								6658
+						</span>
+						<a class="answertxt"  href="#">如何把食物相关的文章写出类似「舌尖上的中国」的风格？</a>
+					</div>
+			    </div>
+			    <div class="answerbottom"><span>知乎用户在  <a href=""> 影视评论</a>、<a href="">编剧</a>、<a href="">导演</a>等话题下获得了54086个赞同</span>
+				</div>
+		    </ul>
+			<ul id="ul12" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/70ddd5e0c_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">广告</a>
+			    		<span></span>
+			    	</div>
+		    	<div class="title2">24288 人关注该话题，1000 个精华回答</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							3314
+						</span>
+						<a class="answertxt"  href="#">30 岁年薪 20 万算不算很失败？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							9801
+						</span>
+						<a class="answertxt"  href="#">史上最奇葩的广告语是哪句？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								15020	
+						</span>
+						<a class="answertxt"  href="#">有哪些广告词让你感到惊艳？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								2345	
+						</span>
+						<a class="answertxt"  href="#">目前你看到过或听过的最喜欢或者认为最好的文案是什么？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								6658
+						</span>
+						<a class="answertxt"  href="#">如何把食物相关的文章写出类似「舌尖上的中国」的风格？</a>
+					</div>
+			    </div>
+		    </ul>
+		    <ul id="ul13" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/e77cabe14_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author">交互设计 </a>
+			    		<span></span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 5233个问题，45020 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer ">
+						<span class="vote">
+							4616
+						</span>
+						<a class="answertxt"  href="#">真正打动过你的一个设计是什么？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							4549
+						</span>
+						<a class="answertxt"  href="#">怎样做出优秀的扁平化设计风格 PPT 或 Keynote 幻灯片演示文稿？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+								118	
+						</span>
+						<a class="answertxt"  href="#">信息图（infographic）是怎么做出来的？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							238
+						</span>
+						<a class="answertxt"  href="#">有哪些反人类的科技发明或设计？</a>
+					</div>
+			    </div>	
+			    <div class="answerbottom">
+					<span>Cat Chen在 <a href=""> Facebook</a>、<a href="">关系</a>、<a href="">恋爱</a>等话题下获得了 18135 个赞同</span>
+				</div>
+			</ul>
+			<ul id="ul14" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/481297ddc_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author">Hi-iD</a>
+			    		<span>@游戏邦 @慌乱的岛 微信：zhengjintiao</span>
 			    	</div>
 		    	<div class="title2">367470 人关注该话题，1000 个精华回答</div>
 			    </div>
@@ -366,9 +682,9 @@
 						<span class="vote">
 							3229
 						</span>
-						<a class="answertxt"  href="#">在互联网和移动互联网领域，相对苹果和谷歌，微软落后了多少？</a>
+						<a class="answertxt"  href="#">有哪些格调特别高的手机游戏？</a>
 					</div>
-					<div class="answer ">
+					<div class="answer answers ">
 						<span class="vote">
 							2902
 						</span>
@@ -378,26 +694,92 @@
 						<span class="vote">
 								5020	
 						</span>
-						<a class="answertxt"  href="#">为什么一般的舆论都认为 Apple 或 iPhone 不行了，各种 Android 机舆论却很好？</a>
+						<a class="answertxt"  href="#">@Hi-iD 为什么选择了加入锤子科技？</a>
 					</div>
 			    </div>
-			   <div class="answer ">
+			   <div class="answer answers">
 						<span class="vote">
 							2385
 						</span>
 						<a class="answertxt"  href="#">iOS 不越狱的理由有哪些？</a>
 					</div>
+					 <div class="answerbottom">
+					<span>Hi-iD在 <a href=""> 健康</a>、<a href="">工业设计</a>、<a href="">跑步</a>等话题下获得了 18135 个赞同</span>
+				</div>
+			</ul>
+			<ul id="ul15" class="ulcom ">
+				<a  href="#" class="ullogo" >
+				<img src="image/bb85a3e1b_m.jpg">
+			    </a>
+			    <div class="title">
+			    	<div class="title1">
+			    		<a href="#" class="author"> weizhi pan </a>
+			    		<span>以写半衰期长的答案为目标</span>
+			    	</div>
+		    	<div class="title2">在知乎回答了 90 个问题，56941 人关注他。</div>
+			    </div>
+			    <div class="line"></div>
+			    <div class="content">
+			    	<div class="answer">
+						<span class="vote">
+							1060
+						</span>
+						<a class="answertxt"  href="#">「熟练使用 Bloomberg」到底需要多熟练？熟练哪些内容？</a>
+					</div>
 					<div class="answer answers">
 						<span class="vote">
-							1933
+							1596
 						</span>
-						<a class="answertxt"  href="#">苹果有哪些影像技术积累，为什么 iPhone 的拍照效果比其它手机优秀？</a>
+						<a class="answertxt"  href="#">有哪些通过玩游戏学会了东西的例子？</a>
 					</div>
+					<div class="answer answers">
+						<span class="vote">
+								1430
+						</span>
+						<a class="answertxt"  href="#">为什么很多日本人说英语口音总是很重？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							2341
+						</span>
+						<a class="answertxt"  href="#">风险价值（VaR）是否是有史以来最蠢的衡量指标？</a>
+					</div>
+					<div class="answer answers">
+						<span class="vote">
+							2436
+						</span>
+						<a class="answertxt"  href="#">判定一款网游为「垃圾」的标准有哪些？</a>
+					</div>
+			    </div>	
 			</ul>
 		</div>
 	</div>
 </div>
-<div id="footer"></div>
+<div id="footer">
+	<div id="footerin">
+	<div class="links">
+		<div >
+		<a href="#">© 2014 知乎</a>
+		<span class="dot">·</span>
+		<a href="#">知乎阅读</a>
+		<span class="dot">·</span>
+		<a  href="#">发现</a>
+		<span class="dot">·</span>
+		<a href="#">移动应用</a>
+		<span class="dot">·</span>
+		<a  href="#">来知乎工作</a>
+		</div>
+		<div >
+		<a href="#" >京ICP备 13052560号</a>
+		<span class="dot">·</span>
+		<a>京公网安备 11010802010035号</a>
+		</div>
+	</div>
+	<a class="footpic1" href="#"></a>
+	<a  class="footpic2" href="#"></a>
+	</div>
+
+</div>
 </div>
 </body>
 </html>
