--- a/zjl/kfc/kfc.html
+++ b/zjl/kfc/kfc.html
@@ -13,7 +13,46 @@
 				<img src="image/kfc-wordmark.png">
 			</div>
 			<ul id="search">
-				<li><a class="searchli" href="">Food</a></li>
+				<li class="foodtp">
+					<a class="searchli" href="">Food</a>
+					<a href="#" class="foodpic"></a>
+				<!-- 	ul hover -->
+	                <div class="foodnav">
+	                	<ul id="foodnavin">
+			                  	<li class="foodli foodli1">
+			                  	<a href="#">
+			                  		<img src="image/chicken-nav.jpg" alt="KFC Chicken">
+			                  		Chicken</a>
+			                  	</li>
+			                  	<li class="foodli foodli2">
+			                  	<a href="#">
+			                  		<img src="image/sandwiches-nav.jpg" alt="KFC Sandwiches">
+			                  		Sandwiches</a>
+			                  	</li>
+			                   <li class="foodli foodli3">
+			                  	<a href="#">
+			                  		<img src="image/sides-nav.jpg" alt="KFC Sides">
+			                  		Sides</a>
+			                  	</li>
+			                   <li class="foodli foodli4">
+			                  	<a href="/food/classics/">
+			                  		<img src="image/classics-nav.jpg" alt="KFC Classics">
+			                  		Classics</a>
+			                  	</li>
+			                  <li class="foodli foodli5"><a href="#">
+			                  	<img src="image/bucket-nav.jpg" alt="KFC Lil Bucket">
+			                  	Li'l Bucket</a>
+			                  </li>
+			                    <ul  id="foodli6">
+			                      <li><a href="#">Desserts</a></li>
+			                      <li><a href="#">Drinks</a></li>
+			                      <li><a href="#">Nutrition Calculator</a></li>
+			                      <li class="last"><a href="#" >Full Nutrition Guide</a></li>
+			                    </ul>
+	                    </ul>
+	                </div>
+	              <!--   ul end -->
+				</li>
 				<li><a class="searchli" href="">#HowDoYouKFC</a></li>
 				<li><a class="searchli" href="">Catering</a></li>
 				<li><a class="searchli" href="">Deals</a></li>
