--- a/zjl/5sing/5sing.html
+++ b/zjl/5sing/5sing.html
@@ -84,12 +84,12 @@
 	 <div id="pic">
 		<div id="picinner">
 			<div id="picL">
-				<div class="jtL">
+				<!-- <div class="jtL">
 					<a href=""></a>
 				</div>
 				<div class="jtR">
 					<a href=""></a>
-				</div>
+				</div> -->
 				<div class="picdian">
                          <a href="#" id="controlspan1" picIndex="1" class="banner bancur">1</a>
                          <a href="#" id="controlspan2" picIndex="2" class="banner">2</a>
