--- a/zjl/index.html
+++ b/zjl/index.html
@@ -47,11 +47,27 @@
 				</div>
 			</div>
 			<div class="cons con14">
-
+				<div class="constit">
+				  <a href="zhihu/zhihu.html" target="_blank">知乎</a>
+				</div>
+				<div class="conscon">
+					<a href="zhihu/zhihu.html" target="_blank">
+						<img SRC="index/zhihu.jpg">
+					</a>
+				</div>
 			</div>
 		</div>
 		<div id="content2">
-			<div class="cons con21"></div>
+			<div class="cons con21">
+				<div class="constit">
+				  <a href="kfc/kfc.html" target="_blank">kfc</a>
+				</div>
+				<div class="conscon">
+					<a href="kfc/kfc.html" target="_blank">
+						未完待续
+					</a>
+				</div>
+			</div>
 			<div class="cons con22"></div>
 			<div class="cons con23"></div>
 			<div class="cons con24"></div>
