--- a/zjl/kfc/kfc.html
+++ b/zjl/kfc/kfc.html
@@ -12,10 +12,10 @@
 			<div id="navpic">
 				<img src="image/kfc-wordmark.png">
 			</div>
-			<ul id="search">
-				<li class="foodtp">
-					<a class="searchli" href="">Food</a>
-					<a href="#" class="foodpic"></a>
+			<ul  id="search">
+				<li >
+					<a openindex="false" class="searchli foodtp" href="">Food</a>
+					<a href="#" class="foodpic "></a>
 				<!-- 	ul hover -->
 	                <div class="foodnav">
 	                	<ul id="foodnavin">
@@ -64,7 +64,11 @@
 		</div>
 	</div>
 	<div id="content">
-		<div id="contentl"></div>
+		<div id="contentl">
+			<div id="contentlin">
+				<a href="#" class="l1"><img src="image/7_240x240.jpg" class="l1image"></a>
+			</div>
+		</div>
 		<div id="contentm"></div>
 		<div id="contentr"></div>
 	</div>
