--- a/zjl/zhihu/zhihu.html
+++ b/zjl/zhihu/zhihu.html
@@ -12,8 +12,8 @@
 	<div class="vediobg">
 		<div style="max-width: 1500px;height:766px; margin: 0 auto;z-index:0; text-align: center;">
 			<video autoplay="autoplay" loop="loop" preload="">
-			<source src="home_video_v3.1.mp4" type="video/mp4">
-			<source src="home_video_v3.1.webm" type="video/webm">
+			<source src="http://s1.zhimg.com/misc/home_video_v3.1.mp4" type="video/mp4">
+			<source src="http://s1.zhimg.com/misc/home_video_v3.1.webm">
 			<img src="image/home-bg.png" style="margin: 0 auto;height:360px; width:1000;">
 			</video>
 		</div>
