--- a/zjl/index.html
+++ b/zjl/index.html
@@ -11,7 +11,7 @@
 	<div id="title">
 		<div id="title1">个人作品集</div>
 		<div id="title2">
-			&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="http://192.168.1.35"><<<返回首页</a>
+			&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="http://192.168.1.35"><<<&nbsp返回首页</a>
 		</div>
 	</div>
 	<div id="content">
@@ -68,7 +68,16 @@
 					</a>
 				</div>
 			</div>
-			<div class="cons con22"></div>
+			<div class="cons con22">
+				<div class="constit">
+				  <a href="webqq/webqq.html" target="_blank">Smart QQ</a>
+				</div>
+				<div class="conscon">
+					<a href="webqq/webqq.html" target="_blank">
+						<img SRC="index/webqq.jpg">
+					</a>
+				</div>
+			</div>
 			<div class="cons con23"></div>
 			<div class="cons con24"></div>
 		</div>
