--- a/zjl/webqq/webqq.html
+++ b/zjl/webqq/webqq.html
@@ -11,7 +11,7 @@
 		<div id="top">
 			<div id="top1">
 				<a class="toptx" href="#">
-					<span id="txstate" class="txstateimg"></span>
+					<span id="txstate" class="statepic onlinepic statepic01"></span>
 				</a>
 				<div class="topzl">
 					<span class="topname">蝉想</span>
@@ -442,8 +442,75 @@
 			<div id="shezhi" class="huihua disappear">
 				<div class="huihuatop">设置<span colorindex="1" class="yifu"></span></div>
 				<div class="huihuacon">
-					
-				</div>	
+					<li class="set">
+						<div class="setout">
+						<div class="setheader">
+							<a> <img src="image/g.jpg"></a>
+						</div>
+						<div class="setzl">
+							<a class="setname">蝉想</a>
+							<a class="setnumber">449266578</a>
+						</div>
+						<div show="flase" class="onlinestate">
+							<i class="statepic onlinepic statepic01"></i>
+							<i class="onlinetip"></i>
+                             <ul  class="statelist disappear">
+								<li class="stateli">
+									<a findclass="statepic01" class="onlinepic statepic01 "></a>
+									<span class="onlineword">在线</span>
+								</li>
+								<li  class="stateli">
+									<a findclass="statepic02"class="onlinepic statepic02"></a>
+									<span class="onlineword">Q我</span>
+								</li>
+								<li class="stateli">
+									<a findclass="statepic03" class="onlinepic statepic03"></a>
+									<span class="onlineword">离开</span>
+								</li>
+								<li  class="stateli">
+									<a findclass="statepic04" class="onlinepic statepic04"></a>
+									<span class="onlineword">忙绿</span>
+								</li>
+								<li  class="stateli">
+									<a findclass="statepic05"class="onlinepic statepic05"></a>
+									<span class="onlineword">静音</span>
+								</li>
+								<li  class="stateli">
+									<a findclass="statepic06" class="onlinepic statepic06"></a>
+									<span class="onlineword">隐身</span>
+								</li>
+								<li  class="stateli">
+									<a findclass="statepic07" class="onlinepic statepic07"></a>
+									<span class="onlineword">离线</span>
+								</li>
+							</ul> 
+						</div>
+					</div>
+				</li>	
+				<li class="set">
+					<div class="setout setshuoshuo">
+						<span class="lables">个性签名:</span>
+						<span class="lable">吃饭睡觉敲代码 = =</span>
+					</div>
+					</li>
+					<li class="set">
+						<div class="setout setother">
+							<a class="lable">消息相关设置</a>
+							<a class="lablepic"></a>
+						</div>
+					</li>
+					<li class="set">
+						<div class="setout setother">
+							<a class="lable">关于QQ</a>
+							<a class="lablepic"></a>
+						</div>
+					</li>
+					<li class="set">
+						<div class="setout setother logionout">    
+            				退出当前帐号          
+    					</div>
+					</li>
+			</div>	
 			</div>
 			<ul id="footer">
 					<li footerappear="huihua" class="footerli footl">
